--- a/app/globals.css
+++ b/app/globals.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Comic Sans MS", "Comic Sans", cursive;
 }
 
 @layer base {
@@ -68,6 +68,10 @@ body {
     @apply border-border;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground w-screen h-screen;
   }
+}
+
+.polygon {
+  clip-path: polygon(0 0, 100% 0, 75% 100%, 0% 100%);
 }
