--- a/app/globals.css
+++ b/app/globals.css
@@ -91,3 +91,9 @@ body {
 .polygon {
   clip-path: polygon(0 0, 100% 0, 75% 100%, 0% 100%);
 }
+
+input[type="number"]::-webkit-inner-spin-button,
+input[type="number"]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
